--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,13 +23,14 @@ jobs:
           playwright install chromium
 
       - name: Run scraper
-        run: |
-          python mozzart_scraper.py
+        run: python mozzart_scraper.py
 
       - name: Commit results
-  run: |
-    git config --global user.name "github-actions"
-    git config --global user.email "actions@github.com"
-    git add *.xlsx || true
-    git commit -m "Auto update results" || true
-    git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/MarkoPetr/MozzartScraper.git HEAD:main
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
+          git add *.xlsx || true
+          git commit -m "Auto update results" || true
+          git push https://x-access-token:$GH_TOKEN@github.com/MarkoPetr/MozzartScraper.git HEAD:main
