--- a/.github/workflows/debug_scraper.yml
+++ b/.github/workflows/debug_scraper.yml
@@ -1,1 +1,34 @@
+name: Mozzart Scraper Debug
 
+on:
+  workflow_dispatch:  # Možeš ručno pokrenuti
+  schedule:
+    - cron: '0 21 * * *'  # opcionalno: dnevno u 21h
+
+jobs:
+  debug_scrape:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repo
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install playwright pandas openpyxl
+        playwright install
+
+    - name: Run mozzart scraper
+      run: python mozzart_scraper.py
+
+    - name: Upload debug_matches.txt
+      uses: actions/upload-artifact@v3
+      with:
+        name: debug-matches
+        path: debug_matches.txt
