--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,34 @@
-name: Mozzart Debug Scraper 1
+name: Mozzart Scraper Daily 1
 
 on:
-  workflow_dispatch:
   schedule:
     - cron: '0 9 * * *'
+  workflow_dispatch:
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install playwright
-        playwright install chromium
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pandas openpyxl playwright
+          playwright install chromium
 
-    - name: Run Mozzart debug scraper
-      run: python mozzart_scraper.py
+      - name: Run Mozzart scraper
+        run: python mozzart_scraper.py
 
-    - name: Upload debug artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: mozzart-debug
-        path: |
-          debug_page.png
-          debug_page.html
+      - name: Upload results
+        uses: actions/upload-artifact@v4
+        with:
+          name: mozzart_finished_yesterday
+          path: mozzart_finished_yesterday.xlsx
