--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Mozzart Scraper Playwright
+name: Mozzart Scraper Requests
 
 on:
   workflow_dispatch:
@@ -24,8 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install playwright pandas openpyxl
-        playwright install
+        pip install requests pandas openpyxl
 
     - name: Run Mozzart Scraper
       run: |
