--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Mozzart Scraper Requests
+name: Mozzart Scraper Playwright XHR
 
 on:
   workflow_dispatch:
@@ -21,10 +21,11 @@ jobs:
       with:
         python-version: '3.11'
 
-    - name: Install dependencies
+    - name: Install Playwright and dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests pandas openpyxl
+        pip install playwright pandas openpyxl requests
+        playwright install
 
     - name: Run Mozzart Scraper
       run: |
