--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,32 @@
-name: Mozzart Debug
+name: Mozzart Full Page Dump
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
 
 jobs:
-  debug:
+  scrape:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
-    - name: Install dependencies
-      run: |
-        pip install playwright
-        playwright install chromium
+      - name: Install dependencies
+        run: |
+          pip install playwright
+          playwright install chromium
 
-    - name: Run debug scraper
-      run: python mozzart_scraper.py
+      - name: Run scraper
+        run: |
+          python mozzart_scraper.py
+
+      - name: Upload results
+        uses: actions/upload-artifact@v4
+        with:
+          name: mozzart-full-dump
+          path: output/
