--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Mozzart Full Page Dump
+name: Mozzart Finished Matches to Excel
 
 on:
   workflow_dispatch:
@@ -8,25 +8,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
       - name: Install dependencies
         run: |
-          pip install playwright
+          pip install playwright pandas openpyxl
           playwright install chromium
 
-      - name: Run scraper
+      - name: Run Mozzart scraper
         run: |
           python mozzart_scraper.py
 
-      - name: Upload results
+      - name: Upload Excel result
         uses: actions/upload-artifact@v4
         with:
-          name: mozzart-full-dump
+          name: mozzart-excel-results
           path: output/
